# mcp-logger

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: ci.yml
src/mcp_logger/: __init__.py  cli.py  config.py  decorators.py  formatters.py  logger.py  metrics.py  rotation.py  sanitizer.py
tests/: test_config_unit.py  test_decorators.py  test_formatters_unit.py  test_logger.py  test_metrics.py  test_rotation.py  test_sanitizer.py
